# argus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONNECTION_EXAMPLES.md  HIVE_PARAMETERS_COMPARISON.md  IMPALA_PARAMETERS_COMPARISON.md  PRIVACY.md  README.md  TRINO_PARAMETERS_COMPARISON.md
.github/: lsan.supp  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: FindODBC.cmake
connectors/powerbi/: Argus.mproj  Argus.pq  Argus.query.pq  README.md  build.ps1  resources.resx
connectors/tableau/: README.md  build.ps1  validate-xml.py
connectors/tableau/argus-bigquery/: connectionBuilder.js  connectionFields.xml  connectionMetadata.xml  connectionResolver.tdr  dialect.tdd  manifest.xml
connectors/tableau/argus-hive/: connectionBuilder.js  connectionFields.xml  connectionMetadata.xml  connectionResolver.tdr  dialect.tdd  manifest.xml
connectors/tableau/argus-impala/: connectionBuilder.js  connectionFields.xml  connectionResolver.tdr  dialect.tdd  manifest.xml
connectors/tableau/argus-mysql/: connectionBuilder.js  connectionFields.xml  connectionMetadata.xml  connectionResolver.tdr  dialect.tdd  manifest.xml
connectors/tableau/argus-trino/: connectionBuilder.js  connectionFields.xml  connectionMetadata.xml  connectionResolver.tdr  dialect.tdd  manifest.xml
connectors/tableau/tdvt/: README.md  tdvt_override.ini
connectors/tableau/tdvt/tds/: Staples.argus_trino.tds  cast_calcs.argus_trino.tds
connectors/tableau/tdvt/trino-testdata/: ddl.sql  (+1 more)
docs/: ADBC.md  ADDING_BACKENDS.md  ARCHITECTURE.md  BI_TOOLS.md  BUILDING.md  CONFIGURATION.md  FLIGHTSQL_DESIGN.md  LICENSING.md  ROADMAP.md  SIMBA_PARITY.md  TELEMETRY.md
include/argus/: adbc.h  backend.h  compat.h  dialect.h  error.h  handle.h  log.h  obs_hooks.h  odbc_api.h  telemetry.h  types.h
installer/: argus-odbc.nsi
installer/intune/: Detect.ps1  Install.ps1  README.md  Uninstall.ps1
packaging/: argus-odbc.spec  build-deb.sh  build-macos-pkg.sh  build-rpm.sh
scripts/: build-thrift-c-glib.sh  bundle_windows_dlls.sh  install_dsn.sh  install_dsn_macos.sh
src/: CMakeLists.txt  argus_build_id.h.in  version.rc.in
src/adbc/: argus_adbc.c
src/backend/: backend.c  http_client.c  http_client.h  thrift_gio_transport.c  thrift_gio_transport.h  thrift_sasl.c  thrift_sasl.h
src/backend/bigquery/: bigquery_auth.c  bigquery_backend.c  bigquery_internal.h  bigquery_types.c
src/backend/druid/: druid_backend.c  druid_internal.h  druid_types.c
src/backend/flightsql/: flightsql_backend.cpp  flightsql_convert.cpp  flightsql_convert.h  flightsql_internal.h
src/backend/hive/: hive_backend.c  hive_fetch.c  hive_internal.h  hive_metadata.c  hive_query.c  hive_session.c  hive_types.c  thrift_http_transport.c  thrift_http_transport.h
src/backend/impala/: impala_backend.c  impala_fetch.c  impala_internal.h  impala_metadata.c  impala_query.c  impala_session.c  impala_types.c
src/backend/kudu/: kudu_backend.c  kudu_fetch.c  kudu_internal.h  kudu_metadata.cpp  kudu_query.cpp  kudu_session.cpp  kudu_sql_parser.c  kudu_sql_parser.h  kudu_types.c
src/backend/mysql/: mywire_backend.c  mywire_internal.h  mywire_metadata.c  mywire_types.c
src/backend/phoenix/: phoenix_backend.c  phoenix_fetch.c  phoenix_internal.h  phoenix_metadata.c  phoenix_query.c  phoenix_session.c  phoenix_types.c
src/backend/pinot/: pinot_backend.c  pinot_internal.h  pinot_types.c
src/backend/trino/: trino_backend.c  trino_fetch.c  trino_internal.h  trino_metadata.c  trino_query.c  trino_session.c  trino_spooling.c  trino_types.c
src/odbc/: api_entry.c  attr.c  catalog.c  connect.c  desc.c  diag.c  dialect.c  dsn.c  escape.c  execute.c  fetch.c  handle.c  info.c  log.c  metadata_cache.c  obs_hooks.c  pool.c  setup.c  telemetry.c  unicode.c  util.c
tests/: CMakeLists.txt
tests/bench/: README.md  bench.c
tests/integration/: bigquery-seed.yaml  docker-compose.yml  test_adbc.cpp  test_async.c  test_bi_escapes.c  test_bi_folding.c  test_bigquery_connect.c  test_bigquery_query.c  test_block_cursor.c  test_failover.c  test_flightsql_connect.c  test_flightsql_query.c  test_flink_connect.c  test_flink_query.c  test_hive_connect.c  test_hive_http.c  test_hive_kerberos.c  test_hive_query.c  test_impala_connect.c  test_impala_query.c  test_impala_sasl_debug.c  test_kudu_connect.c  test_kudu_query.c  test_mysql_connect.c  test_mysql_query.c  test_phoenix_connect.c  test_phoenix_query.c  test_pinot_connect.c  test_pinot_query.c  test_scroll_cap.c  test_spark_connect.c  test_spark_query.c  test_trino_connect.c  test_trino_query.c  test_trino_ssl.c
tests/integration/certs/: generate.sh
tests/integration/kerberos/: Dockerfile.kdc  README.md  core-site.xml  entrypoint-kdc.sh  kdc.conf  kerberos-compose.yml  krb5.conf.container  krb5.conf.host
tests/integration/mysql-init/: 01-schema.sql
tests/integration/trino-ssl-config/: config.properties
tests/pqtest/: README.md  run-pqtest.ps1
tests/pqtest/connectors/: Argus.pq  ArgusFold.pq  ArgusNav.pq
tests/pqtest/queries/: trino-count.query.pq  trino-count.query.pqout  trino-filter.query.pq  trino-filter.query.pqout  trino-folding.query.pq  trino-folding.query.pqout  trino-navigator.query.pq
tests/tools/: gen_test_license.py  license_mock_server.py  telemetry_mock_collector.py
tests/unit/: test_bi_connect_sequence.c  test_bigquery_types.c  test_bind_parameter.c  test_catalog.c  test_colattribute_meta.c  test_connect_string.c  test_descriptor.c  test_diag.c  test_dialect.c  test_druid_types.c  test_dsn.c  test_escape.c  test_fetch_features.c  test_flightsql_convert.cpp  test_getdata_multi.c  test_getinfo_exhaustive.c  test_handle.c  test_impala_types.c  test_info.c  test_kudu_sql_parser.c  test_kudu_types.c  test_license_seam.c  test_odbc2_compat.c  test_p2_features.c  test_phoenix_types.c  test_pinot_types.c  test_pool.c  test_telemetry.c  test_trino_types.c  test_type_convert.c  test_unicode.c  test_wide_api.c
thrift/: CMakeLists.txt  TCLIService.thrift  gen_prime.cmake  patch_finalize.cmake
